Project 3 - Kubernetes Deployment/ingress-with-tls.yaml
# Kubernetes Ingress resource with TLS termination using cert-manager and Let's Encrypt
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - my-app.127.0.0.1.nip.io # Replace with your actual domain
    - api.my-app.127.0.0.1.nip.io # Replace with your actual domain
    secretName: test-tls # Secret to store the TLS certificate
  rules:
  - host: my-app.127.0.0.1.nip.io # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
  - host: api.example.com # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
